# sift

./: .bandit  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.rst  INSTALLER_README.md  MANIFEST.in  Makefile  README.md  RELEASING.md  Test_Data.lnk  build_conda_pack.py  build_release.py  conda-build-list.txt  conda-osx-jbraun-v070.txt  conda-osx-raava-py35.txt  conda-osx-sift36.txt  conda_env.yml  conf.py  data.json  geometry_tests.ipynb  id_rsa_sift_sftp.enc  index.rst  make.bat  mtgsift-onedir.spec  mtgsift-onefile.spec  mtgsift-pyinstaller-package.spec  pyproject.toml  rtd_requirements.txt  setup.cfg  setup.py  shapely.geos.patch  sift-pyinstaller-package.spec  sift.iss  sift.spec
.github/workflows/: ci.yaml  deploy.yaml
bundle_scripts/: README.md  SIFT.bat  SIFT.sh  qt_conf_fix.py  refreshenv.sh
cmake/: FindConda.cmake  FindPyInstaller.cmake
conda-envs/: mtgsift-devel-complete.pkgs  mtgsift-devel-minimal.pkgs  mtgsift-devel.pkgs  sift-devel-complete.pkgs  sift-devel-minimal.pkgs
conda-recipe/cspov/: bld.bat  build.sh  meta.yaml
conda-recipe/matplotlib/: bld.bat  build.sh  meta.yaml  osx-frame.patch  setupext.patch
conda-recipe/mtgsift/: meta.yaml
conda-recipe/quamash/: meta.yaml
conda-recipe/satpy/: meta.yaml
conda-recipe/sift/: bld.bat  meta.yaml  setup.py
conda-recipe/uwsift/: meta.yaml
conda-recipe/vispy/: ctypes_fontconfig.diff  meta.yaml
continuous_integration/: build_conda_pack.sh  environment.yaml  linux_full_deps_apt.txt  rtd_environment.yaml  upload_conda_pack.sh
doc/source/: INSTALLATION-mtgsift.rst  PACKAGING-mtgsift.rst  PACKAGING-sift.rst  api.rst  auto_update_mode.rst  conf.py  configuration-area_definitions.rst  configuration-catalogue-auto_update_mode.rst  configuration-default_colormaps.rst  configuration-display.rst  configuration-external_satpy.rst  configuration-logging.rst  configuration-points_styles.rst  configuration-readers.rst  configuration-satpy_import_path.rst  configuration-standard_names.rst  configuration-storage.rst  configuration-watchdog.rst  configuration.rst  design_overview.rst  index.rst  installation.rst  profiling.rst  test.diag
etc/: create_distribution.sh
install_scripts/win-64/: Install SIFT.bat  README  create_shortcuts.py  rsync_sift_ahi.bat
py/: MANIFEST.in  __main__.spec  geometry_tests.ipynb  setup.py  sift.iss  sift.spec
py/cspov/: __init__.py  __main__.py  common.py  queue.py
py/doc/: Makefile  make.bat
py/sift/: __init__.py
resources/service/: uwsift-watchdog.service  uwsift.service
sift/: __init__.py  __main__.py  common.py  queue.py  util.py  version.py
sift.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sift/control/: LayerManager.py  doc_ws_as_timeline_scene.py  file_behaviors.py  layer_info.py  layer_tree.py  rgb_behaviors.py
sift/model/: __init__.py  colormap.py  composite_recipes.py  document.py  guidebook.py  layer.py  matrix.py  product_timeline.py  shapes.py
sift/project/: ahi2gtiff.py  ahi2merc.py  geocat2merc.py  organize_data_bands.py  organize_data_topics.py
sift/tests/: __init__.py  gltiles.py  timeline.py
sift/ui/: GradientControl.py  build.sh  change_colormap_dialog.ui  change_colormap_dialog_ui.py  config_rgb_layer.ui  config_rgb_layer_ui.py  create_algebraic_dialog.ui  create_algebraic_dialog_ui.py  custom_widgets.py  export_image_dialog.ui  export_image_dialog_ui.py  open_cache_dialog.ui  open_cache_dialog_ui.py  open_file_wizard_ui.py  pov_main.ui  pov_main_ui.py
sift/util/: __init__.py  default_paths.py
sift/view/: Colormap.py  LayerRep.py  MapWidget.py  ProbeGraphs.py  SceneGraphManager.py  TimelineCommon.py  TimelineItems.py  TimelineScene.py  TimelineView.py  __init__.py  cameras.py  colormap.py  colormap_dialogs.py  colormap_editor.py  create_algebraic.py  export_image.py  layer_details.py  open_file_wizard.py  probes.py  rgb_config.py  scene_graph.py  texture_atlas.py  transform.py  visuals.py
sift/workspace/: __init__.py  collector.py  goesr_pug.py  guidebook.py  importer.py  matrix.py  metadatabase.py  workspace.py  zookeeper.py
uwsift/: __init__.py  __main__.py  common.py  queue.py  satpy_compat.py  version.py
uwsift/control/: __init__.py  auto_update.py  doc_ws_as_timeline_scene.py  file_behaviors.py  layer_tree.py  qml_utils.py  rgb_behaviors.py  time_matcher.py  time_matcher_policies.py  time_transformer.py  time_transformer_policies.py
uwsift/model/: __init__.py  area_definitions_manager.py  area_defnitions_manager.py  catalogue.py  composite_recipes.py  document.py  layer.py  layer_item.py  layer_model.py  product_dataset.py  shapes.py  time_manager.py
uwsift/project/: ahi2gtiff.py  ahi2merc.py  geocat2merc.py  organize_data_bands.py  organize_data_topics.py  project_time_step.sh
uwsift/tests/: __init__.py  conftest.py  icons.url  test_satpy_import.py  timeline.py
uwsift/ui/: TimelineRuler.qml  __init__.py  build.sh  change_colormap_dialog.ui  change_colormap_dialog_ui.py  config_rgb_layer_ui.py  create_algebraic_dialog.ui  create_algebraic_dialog_ui.py  custom_widgets.py  dataset_statistics_widget.ui  dataset_statistics_widget_ui.py  export_image_dialog.ui  export_image_dialog_ui.py  layer_details_widget.ui  layer_details_widget_ui.py  open_cache_dialog.ui  open_cache_dialog_ui.py  open_file_wizard.ui  open_file_wizard_2.ui  open_file_wizard_2_ui.py  open_file_wizard_ui.py  pov_main.ui  pov_main_ui.py  resample_dialog.ui  resample_dialog_ui.py  timeline.qml
uwsift/util/: __init__.py  common.py  default_paths.py  disk_management.py  heap_analyzer.py  heap_profiler.py  logger.py  ps_analyzer.py  ps_profiler.py  storage_agent.py  watchdog.py
uwsift/view/: algebraic_config.py  cameras.py  colormap.py  colormap_dialogs.py  colormap_editor.py  create_algebraic.py  dataset_statistics_pane.py  export_image.py  layer_details.py  layer_tree_view.py  open_file_wizard.py  open_file_wizard_2.py  probes.py  resample.py  rgb_config.py  scene_graph.py  test_visuals.py  texture_atlas.py  tile_calculator.py  transform.py  visuals.py
(+326 files in other folders)
