[build-system]
requires = ["setuptools >= 40.9.0", "wheel", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
exclude = '''
(
  \.git
  | build
  | dist
)

'''

[tool.coverage.run]
relative_files = true
omit = ["uwsift/version.py"]

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
skip_gitignore = true
default_section = "THIRDPARTY"
known_first_party = "uwsift"
skip = [".gitignore"]
